# ReportBuilder

./: .gitignore  README.md
DesignRules/: Правила оформления.pptx
ReportBuilder/: PracticeWordReportBuilder.py  ReportBuilder.py  SourceList.py  TextCleaner.py  config.py  practice.py  ВТП Фамилия.docx
ReportBuilder/Archive/: WordReportBuilder.py  lrWork.py  tempLrWork.py
ReportBuilder/PracticeProject/: CMakeLists.txt  PRACTICE_PROJECT_STRUCTURE.md
ReportBuilder/PracticeProject/include/: file_storage.h  file_storage_errors.h  metadata.h  utils.h  uuid.h
ReportBuilder/PracticeProject/src/: CMakeLists.txt  file_storage.c  metadata.c  utils.c
ReportBuilder/PracticeProject/tests/: CMakeLists.txt  file_storage_test.c  main.c  metadata_test.c  utils_test.c
